tests/ui/const-generics/array-const-arg-type-mismatch.stderr
warning: the feature `min_generic_const_args` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/array-const-arg-type-mismatch.rs:1:30
   |
LL | #![feature(adt_const_params, min_generic_const_args)]
   |                              ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: the constant `Bar` is not of type `Foo`
  --> $DIR/array-const-arg-type-mismatch.rs:13:14
   |
LL |     test::<{ [Bar] }>();
   |              ^^^^^ expected `Foo`, found `Bar`

error: aborting due to 1 previous error; 1 warning emitted

